--- a/src/Components/Parking/styles.css
+++ b/src/Components/Parking/styles.css
@@ -94,16 +94,16 @@
     height: 60vh;
     border-radius: 1rem;
   }
-  .parkingImageContainer{
 
-  }
 
   .SlotsContainer{
     width: 20vw;
     height: 60vh;
     background-color: rgba(217, 217, 217,0.5);
     border-radius: 1rem;
+    overflow-y: scroll; 
   }
+  
 .slotHead{
     font-size: 2rem;
     text-align: center;
